--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@ body {
     }
 
     canvas {
-      width: min(calc(100vw - 8px), calc(100vh * (16/9) - 8px));
+      width: min(100vw, calc(100vh * (16/9)));
       aspect-ratio: 16/9;
     }
     </style>
